# libfcs

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
app/: CMakeLists.txt
app/src/: fcs_client.c  fcs_struct.h
cmake/: arch.cmake  checkGit.cmake  coverage.cmake  doxygen.cmake  os.cmake
include/: CMakeLists.txt  libfcs.h
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/common/: CMakeLists.txt  libfcs_filesys_ops.h  libfcs_osal.h
lib/include/os/: CMakeLists.txt
lib/include/os/freertos/: CMakeLists.txt  libfcs_logging.h  libfcs_utils.h
lib/include/os/linux/: CMakeLists.txt  libfcs_logging.h  libfcs_utils.h
lib/include/os/zephyr/: libfcs_logging.h
lib/src/: CMakeLists.txt
lib/src/common/: CMakeLists.txt  libfcs.c
lib/src/os/: CMakeLists.txt
lib/src/os/freertos/: CMakeLists.txt  libfcs_logging.c  libfcs_osal.c  libfcs_utils.c
lib/src/os/linux/: CMakeLists.txt  libfcs_file_ops.c  libfcs_logging.c  libfcs_osal.c  libfcs_utils.c
toolchain/: CMakeLists.txt
toolchain/freertos_aarch64/: CMakeLists.txt  aarch64-none-elf-gcc.cmake  toolchain.cmake
toolchain/freertos_aarch64/include/: CMakeLists.txt  libfcs_osal_types.h
toolchain/host/: CMakeLists.txt  gcc-9.cmake  gcc.cmake  toolchain.cmake
toolchain/host/include/: libfcs_osal_types.h
toolchain/linux_aarch64/: CMakeLists.txt  aarch64-none-linux-gnu-gcc.cmake  toolchain.cmake
toolchain/linux_aarch64/include/: libfcs_osal_types.h
toolchain/zephyr_aarch64/: CMakeLists.txt  toolchain.cmake
toolchain/zephyr_aarch64/include/: CMakeLists.txt  libfcs_osal_types.h
tools/fcs_prepare/: CMakeLists.txt  README.txt
tools/fcs_prepare/include/: fcs_version.h.in  intel_fcs_structs.h
tools/fcs_prepare/src/: fcs_cs_key_object.c  fcs_prepare.c
